# openclaw

./: .gitignore  .secrets.baseline  AGENTS.md  CHANGELOG.md  Dockerfile  MACLAWD_DEPRECATED.md  README.md  pnpm-lock.yaml  setup-podman.sh
rust-agent/: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md  run-best.sh  run-discord.sh  run-local.sh  serve-vllm-mlx.sh
rust-agent/ChumpMenu/: Info.plist  Package.swift  README.md
rust-agent/docs/: ARCHITECTURE.md  AUTONOMOUS_PR_WORKFLOW.md  BLOG_CHUMP_DEEP_DIVE.md  BULLETPROOF_CHASSIS.md  CHUMP_AUTONOMY_TESTS.md  CHUMP_BRAIN.md  CHUMP_IDENTITY.md  CHUMP_PROJECT_BRIEF.md  CHUMP_SERVICE.md  CHUMP_SMART_MEMORY.md  CHUMP_WISHLIST.md  FULLY_ARMORED_VEHICLE.md  MEMORY_AND_PROCESSES.md  MLX_MULTI_MODEL.md  OPERATIONS.md  ORCHESTRATOR_WORKER.md  README.md  ROADMAP.md  ROADMAP_DOGFOOD_SELF_IMPROVE.md  ROADMAP_PARALLEL_AGENTS.md  SPECULATIVE_AND_EMBEDDINGS.md  STRUCTURED_TOOL_OUTPUT.md  TEACHING_CHUMP_WHAT_WE_BUILD.md  TROUBLESHOOTING.md  USER_STORIES.md  WASM_TOOLS.md  WISHLIST.md
rust-agent/scripts/: build-chump-menu.sh  check-heartbeat-preflight.sh  check.sh  download-30b-model.py  download-mlx-models.sh  embed_server.py  farmer-brown.plist.example  farmer-brown.sh  heartbeat-learn.sh  heartbeat-self-improve.sh  heartbeat-shepherd.sh  memory-keeper.sh  oven-tender.sh  requirements-embed.txt  run-autonomy-tests.sh  run-stories.sh  sentinel.sh  serve-multi-mlx.sh  serve-vllm-mlx-8001.sh  start-embed-server.sh  test-heartbeat-learn.sh  test-tier5-self-improve.sh  warm-the-ovens.sh
rust-agent/src/: calc_tool.rs  limits.rs  (+30 more)
(+89 files in other folders)
